# blender-mcp-nimble

./: .gitignore  LICENSE  README.md  pyproject.toml
blender_addon/: blender_mcp_nimble_addon.py
src/blender_mcp_nimble/: __init__.py  server.py
